--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deep-hough-transform"]
-	path = deep-hough-transform
+	path = deep_hough_transform
 	url = git@github.com:hanyang-hu/deep-hough-transform.git
